src/snapshots/ruff__linter__tests__D412_sections.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    NoBlankLinesBetweenHeaderAndContent: Short summary
  location:
    row: 207
    column: 5
  end_location:
    row: 221
    column: 8
  fix:
    patch:
      content: ""
      location:
        row: 211
        column: 1
      end_location:
        row: 212
        column: 1
    applied: false

